# TikTok-Account-Downloader

./: .env.example  CONTRIBUTING.md  README.md  download.sh  pyproject.toml  requirements.txt  run.bat  test_dl.py  view.bat  view.sh  viewer.py
.github/workflows/: python-package.yml
src/: cookies.example.txt  main.py
src/tiktok_account_downloader/: __init__.py  cli.py  db.py  downloader.py  scanner.py  utils.py
src/tiktok_account_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: index.html
